--- a/index.html
+++ b/index.html
@@ -2,32 +2,67 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Enfo News</title>
+    <title>Toll Fee Calculator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--Stylesheets-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|Playfair+Display:400,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/style.min.css" type="text/css">
+    <link rel="stylesheet" href="./assets/dist/css/style.css" type="text/css">
   </head>
   <body>
-    <section role="main" id="wrapper">
+    <!-- Will input car animation here -->
+    <section role="main" class="country-wrap">
       <!--Header-->
       <header id="header" class="header">
-        <div id="branding">
-          <img src="assets/logo.gif">
-        </div>
         <h1>Toll Fee Calculator</h1>
-
       </header>
 
       <section id="content">
-        <!-- Will input car animation here -->
-      </content>
+      	<div class="sun"></div>
+      	<div class="grass"></div>
+      	<div class="street">
+      		<div class="car">
+        		<div class="car-body">
+        			<div class="car-top-back">
+        				<div class="back-curve"></div>
+        			</div>
+        			<div class="car-gate"></div>
+        			<div class="car-top-front">
+        				<div class="wind-sheild"></div>
+        			</div>
+        			<div class="bonet-front"></div>
+        			<div class="stepney"></div>
+        		</div><!-- .car-body end -->
+        		<div class="boundary-tyre-cover">
+        			<div class="boundary-tyre-cover-back-bottom"></div>
+        			<div class="boundary-tyre-cover-inner"></div>
+        		</div>
+        		<div class="tyre-cover-front">
+        			<div class="boundary-tyre-cover-inner-front"></div>
+        		</div>
+        		<div class="base-axcel"></div>
+        		<div class="front-bumper"></div>
+        		<div class="tyre">
+        			<div class="gap"></div>
+        		</div>
+        		<div class="tyre front">
+        			<div class="gap"></div>
+        		</div>
+        		<div class="car-shadow"></div>
+        	</div> <!-- .car end -->
+      	</div> <!-- .car end -->
+      	<div class="street-stripe"></div>
+      	<div class="hill"></div>
+      </section>
 
       <footer>
         <!--JS Scripts-->
-        <script type="text/javascript" src="./assets/js/toll-fee-calculator.min.js"></script> <!--Mobile menu JS-->
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+        crossorigin="anonymous"></script>
+        <!-- <script type="text/javascript" src="./assets/dist/js/toll-fee-calculator.min.js"></script> -->
+
       </footer>
-    </section>
   </body>
 </html>
