Added toll fee & info bubble graphics

--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       	<div class="sun"></div>
       	<div class="grass"></div>
       	<div class="street">
+          <div class="toll-fee">
+            <p>TOLL FEE</p>
+          </div>
       		<div class="car">
+            <div class="info-bubble"></div>
         		<div class="car-body">
         			<div class="car-top-back">
         				<div class="back-curve"></div>
@@ -61,7 +65,7 @@
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
-        <!-- <script type="text/javascript" src="./assets/dist/js/toll-fee-calculator.min.js"></script> -->
+        <script type="text/javascript" src="./assets/dist/js/scripts.min.js"></script>
 
       </footer>
   </body>
