Added toll free weekends, scooter & modified the toll fee checker

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="toll-fee">
             <p>TOLL FEE</p>
           </div>
+          <div class="scooter"><div class="info-bubble"><p>I'm super eco friendly so I never have to pay a toll fee</p></div></div>
       		<div class="car">
             <div class="info-bubble"></div>
         		<div class="car-body">
